--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <body>
   <i> 
+    <h1 style="text-align: center;">Sobre o Futuro da Loja Mileski</h1>
    <img src="banner.jp">
 
     <h1>Sobre o Futuro da Loja Mileski</h1>
