--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   
   <meta charset="UTF-8">
-  
+  <title>Sobre o Futuro da Loja Mileski</title>
   <link rel="stylesheet" href="style.css">
 
 
