--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p id="missao"><em>minha estratégia é: <strong>"proporcionar varias qualidades de roupa e estilo para os clientes"</strong>.</em></p>
     
     <p>Quero oferecer desfiles profissionais e experientes e antenados ás mudanças no mundo da moda. O desfiles vai ser feito no mundo inteiro quero 
-    que seja um dos mais conhecidos no mundo da moda.</p>
+    que seja um dos mais conhecidos no mundo da moda, </p>
   </i>
     </body>
 
